--- a/pom.xml
+++ b/pom.xml
@@ -2,40 +2,40 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
+
+	<packaging>pom</packaging>
 	<groupId>by.runets.hedgehog</groupId>
 	<artifactId>by.runets.hedgehog</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>by.runets.hedgehog</name>
 	<description>Home task from Hedgehog</description>
+
 	<properties>
 		<java.version>11</java.version>
+		<org.postgresql.version>42.3.3</org.postgresql.version>
 	</properties>
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+	<modules>
+		<module>hedgehog-api</module>
+		<module>hedgehog-app</module>
+		<module>hedgehog-services</module>
+	</modules>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.postgresql</groupId>
+				<artifactId>postgresql</artifactId>
+				<version>${org.postgresql.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 </project>
