--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,11 @@
 version: '3.4'
 services:
+  hedgehog-app:
+    depends_on:
+      - liquibase
+    build: ./
+    ports:
+      - 7771:7771
   db:
     image: "postgres:${POSTGRES_VERSION}"
     volumes:
