--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 POSTGRES_VERSION=14.2
-POSTGRES_HOST=db
+POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 POSTGRES_DB=hedgehog_db
 POSTGRES_PORT=5432
-
-LIQUIBASE_CHANGELOG=hedgehog-app/src/main/resources/db/changelog/dbchangelog.xml
