--- a/verification/src/main/resources/application.properties
+++ b/verification/src/main/resources/application.properties
@@ -1,5 +1,12 @@
-spring.datasource.url=jdbc:postgresql://database:5432/hedgehog_db
+server.port=8887
+spring.datasource.url=jdbc:postgresql://localhost:5432/hedgehog_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=32
+
+task.expiration.timeout=3000000
+task.cleaner.timeout=1000
