--- a/verification/src/main/resources/application.properties
+++ b/verification/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+kafka.address=localhost:9092
+kafka.topic=VERIFICATION_TOPIC
+kafka.group=VERIFICATION_GROUP
+
 server.port=8887
 spring.datasource.url=jdbc:postgresql://localhost:5432/hedgehog_db
 spring.datasource.username=postgres
@@ -10,3 +14,5 @@ spring.datasource.hikari.maximumPoolSize=32
 
 task.expiration.timeout=3000000
 task.cleaner.timeout=1000
+
+code.verification.length=8
