--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialization-mode=always
+
+template.service.url=localhost:8888/templates/render
