--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,7 +1,15 @@
-spring.datasource.url=jdbc:postgresql://database:5432/hedgehog_db
+kafka.address=localhost:9092
+kafka.topic=VERIFICATION_TOPIC
+kafka.group=VERIFICATION_GROUP
+
+template.service.url=http://localhost:8888/templates/render
+
+server.port=8889
+spring.datasource.url=jdbc:postgresql://localhost:5432/hedgehog_db
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.initialization-mode=always
-
-template.service.url=localhost:8888/templates/render
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=32
