--- a/verification/pom.xml
+++ b/verification/pom.xml
@@ -78,7 +78,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>by.runets.hedgehog.Application</mainClass>
+                    <mainClass>by.runets.hedgehog.VerificationApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
