--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -4,6 +4,12 @@ kafka.group=VERIFICATION_GROUP
 
 template.service.url=http://localhost:8888/templates/render
 
+mailhog.service.host=localhost
+mailhog.service.port=8025
+mailhog.service.subject=Hedgehog service code verification
+mailhog.service.from=verification@hedgehog.com
+
+
 server.port=8889
 spring.datasource.url=jdbc:postgresql://localhost:5432/hedgehog_db
 spring.datasource.username=postgres
