--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -9,6 +9,8 @@ mailhog.service.port=8025
 mailhog.service.subject=Hedgehog service code verification
 mailhog.service.from=verification@hedgehog.com
 
+gotify.service.url=http://localhost:80/message?token=AzagebXQjyh2imo
+gotify.service.subject=Hedgehog service code verification
 
 server.port=8889
 spring.datasource.url=jdbc:postgresql://localhost:5432/hedgehog_db
