--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,6 +33,12 @@ services:
     ports:
       - "1025:1025"
       - "8025:8025"
+  gotify:
+    image: gotify/server
+    ports:
+      - "80:80"
+    volumes:
+      - /var/gotify/data:/app/data
 volumes:
   datadb:
     name: postgres-data
