--- a/.env
+++ b/.env
@@ -4,3 +4,22 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=root
 POSTGRES_DB=hedgehog_db
 POSTGRES_PORT=5432
+
+VERIFICATION_SERVICE_PORT=8887
+VERIFICATION_SERVICE_VERSION=0.0.1-SNAPSHOT
+
+TEMPLATE_SERVICE_PORT=8888
+TEMPLATE_SERVICE_VERSION=0.0.1-SNAPSHOT
+
+NOTIFICATION_SERVICE_PORT=8889
+NOTIFICATION_SERVICE_VERSION=0.0.1-SNAPSHOT
+
+ZOOKEEPER_PORT=2181
+
+KAFKA_HOST=localhost
+KAFKA_INT_PORT=9092
+KAFKA_EXTERNAL_PORT=29092
+
+MAILHOG_SSL_PORT=8025
+MAILHOG_PORT=1025
+GOTIFY_PORT=80
