--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,15 +1,16 @@
-kafka.address=localhost:9092
+kafka.address=kafka:29092
 kafka.topic=VERIFICATION_TOPIC
 kafka.group=VERIFICATION_GROUP
 
 template.service.url=http://localhost:8888/templates/render
 
-mailhog.service.host=localhost
-mailhog.service.port=8025
+spring.mail.host=localhost
+spring.mail.port=8025
+
 mailhog.service.subject=Hedgehog service code verification
 mailhog.service.from=verification@hedgehog.com
 
-gotify.service.url=http://localhost:80/message?token=AzagebXQjyh2imo
+gotify.service.url=http://localhost:80/message?token=A6wYEsvUQ6HYzF0
 gotify.service.subject=Hedgehog service code verification
 
 server.port=8889
