--- a/.env
+++ b/.env
@@ -17,8 +17,8 @@ NOTIFICATION_SERVICE_VERSION=0.0.1-SNAPSHOT
 ZOOKEEPER_PORT=2181
 
 KAFKA_HOST=localhost
-KAFKA_INT_PORT=9092
-KAFKA_EXTERNAL_PORT=29092
+KAFKA_PORT=20000
+KAFKA_EXTERNAL_PORT=30000
 
 MAILHOG_SSL_PORT=8025
 MAILHOG_PORT=1025
