--- a/notification/src/main/resources/application.properties
+++ b/notification/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-kafka.address=kafka:29092
+kafka.address=kafka:30000
 kafka.topic=VERIFICATION_TOPIC
 kafka.group=VERIFICATION_GROUP
 
-template.service.url=http://localhost:8888/templates/render
+template.service.url=http://template:8888/templates/render
 
-spring.mail.host=localhost
+spring.mail.host=mailhog
 spring.mail.port=8025
 
 mailhog.service.subject=Hedgehog service code verification
 mailhog.service.from=verification@hedgehog.com
 
-gotify.service.url=http://localhost:80/message?token=A6wYEsvUQ6HYzF0
+gotify.service.url=http://gotify:80/message?token=AAkvz2VEqLX6e6J
 gotify.service.subject=Hedgehog service code verification
 
 server.port=8889
