--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<liquibase.maven.plugin.version>3.9.0</liquibase.maven.plugin.version>
 		<google.guava.version>31.1-jre</google.guava.version>
 		<apache.commons.lang.version>3.12.0</apache.commons.lang.version>
+		<h2database.version>1.4.194</h2database.version>
 	</properties>
 
 	<modules>
@@ -51,6 +52,12 @@
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-lang3</artifactId>
 				<version>${apache.commons.lang.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.h2database</groupId>
+				<artifactId>h2</artifactId>
+				<scope>test</scope>
+				<version>${h2database.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
