--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,8 +2,7 @@ version: '3.4'
 services:
   verification:
     container_name: verification
-    image: "verification:${VERIFICATION_SERVICE_VERSION}"
-    build: verification/
+    image: r2tech/verification
     networks:
       - hedghog-net
     ports:
@@ -17,7 +16,7 @@ services:
       - kafka
   template:
     container_name: template
-    image: "template:${TEMPLATE_SERVICE_VERSION}"
+    image: r2tech/template
     networks:
       - hedghog-net
     ports:
@@ -30,10 +29,9 @@ services:
       - db
   notification:
     container_name: notification
-    image: "notification:${NOTIFICATION_SERVICE_VERSION}"
+    image: r2tech/notification
     networks:
       - hedghog-net
-    build: notification/
     ports:
       - ${NOTIFICATION_SERVICE_PORT}:${NOTIFICATION_SERVICE_PORT}
     environment:
@@ -44,7 +42,7 @@ services:
       - db
       - kafka
   zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+    image: r2tech/zookepeer
     networks:
       - hedghog-net
     ports:
@@ -53,7 +51,7 @@ services:
       ZOOKEEPER_CLIENT_PORT: ${ZOOKEEPER_PORT}
       ZOOKEEPER_TICK_TIME: 2000
   kafka:
-    image: confluentinc/cp-kafka:latest
+    image: r2tech/kafka
     networks:
       - hedghog-net
     restart: unless-stopped
@@ -77,7 +75,7 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_LOG_RETENTION_HOURS: 12
   kafdrop:
-    image: obsidiandynamics/kafdrop:latest
+    image: obsidiandynamics/kafdrop
     networks:
       - hedghog-net
     depends_on:
@@ -87,7 +85,7 @@ services:
     environment:
       KAFKA_BROKERCONNECT: kafka:${KAFKA_EXTERNAL_PORT}
   db:
-    image: "postgres:${POSTGRES_VERSION}"
+    image: r2tech/hedgehog_postgres
     networks:
       - hedghog-net
     volumes:
@@ -99,7 +97,7 @@ services:
     ports:
       - ${POSTGRES_PORT}:${POSTGRES_PORT}
   mailhog:
-    image: mailhog/mailhog
+    image: r2tech/mailhog
     container_name: 'mailhog'
     networks:
       - hedghog-net
@@ -107,7 +105,7 @@ services:
       - ${MAILHOG_PORT}:${MAILHOG_PORT}
       - ${MAILHOG_SSL_PORT}:${MAILHOG_SSL_PORT}
   gotify:
-    image: gotify/server
+    image: r2tech/gotify
     networks:
       - hedghog-net
     ports:
